<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fillViewport="true">


    <LinearLayout
        android:id="@+id/LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/home"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:gravity="center_horizontal"
            android:text="@string/Welcome"/>

        <LinearLayout
            android:id="@+id/LL1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bMenu"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@mipmap/menu"
                android:text="@string/Menu"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/bWebsite"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@mipmap/website"
                android:text="@string/Website"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bContact"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@mipmap/contact"
                android:text="@string/Contact"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/bAbout"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@mipmap/about"
                android:text="@string/About"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>


    </LinearLayout>

</ScrollView>